--- a/main.html
+++ b/main.html
@@ -743,6 +743,7 @@ Can we create a search bar that:
 			{ document.getElementById('brandDropdown').style.display = 'none'; }
 
 		"/>
+	<span class="material-symbols-outlined" onclick="selectContentType('integrations')" style="position: absolute; right: 12px; top: 16px">settings</span>
 
 	<script>
 
@@ -858,15 +859,14 @@ Can we create a search bar that:
 	}
 </script>
 <div class="tabs">
-	<button class="tab" onclick="selectContentType('brand')">Brand</button>
-	<button class="tab" onclick="selectContentType('content')">Content</button>
+	<button class="tab" onclick="selectContentType('brand')">My Brand</button>
+	<button class="tab" onclick="selectContentType('content')">My Content</button>
 	<button class="tab" onclick="selectContentType('newContent')">New Content</button>
-	<button class="tab" onclick="selectContentType('integrations')">Integrations</button>
 </div>
 
 <!-- Brand Tab -->
 <div id="brand" class="w3-container w3-display-container city">
-	<h2>Brand</h2>
+	<h2>My Brand</h2>
 	<!-- BRAND -->
 	<!-- Contact -->
 	<div class="wrap-collabsible">
@@ -3228,7 +3228,50 @@ Can we create a search bar that:
 
 <!-- Content Tab -->
 <div id="content" class="w3-container w3-display-container city" style="display:none">
-	<h2>Content</h2>
+	<h2>My Content</h2>
+
+	<br><br>
+	<div id="emailSignatures">
+		<h3>Email Signatures</h3>
+		<h4>Email Signature 1</h4>
+		<pre>
+  			<code>
+				p { color: red; }
+				body { background-color: #eee; }
+  			</code>
+		</pre>
+		<h4>Email Signature 2</h4>
+		<h4>Email Signature 3</h4>
+		<h4>Email Signature 4</h4>
+	</div>
+
+	<br><br>
+	<div id="socialMediaBanners">
+		<h3>Social Media Banners</h3>
+		<h4>Facebook</h4>
+		<h4>LinkedIn</h4>
+		<h4>Twitter</h4>
+		<h4>YouTube</h4>
+	</div>
+
+	<br><br>
+	<div id="businessCards">
+		<h3>Business Cards</h3>
+		<h4>Business Card 1</h4>
+		<h4>Business Card 2</h4>
+		<h4>Business Card 3</h4>
+		<h4>Business Card 4</h4>
+	</div>
+
+	<br><br>
+	<div id="letterHeads">
+		<h3>Letter Heads</h3>
+		<h4>Letter Head 1</h4>
+		<h4>Letter Head 2</h4>
+		<h4>Letter Head 3</h4>
+		<h4>Letter Head 4</h4>
+	</div>
+
 </div>
 
 <!-- New Content Tab -->
@@ -3550,7 +3593,7 @@ Can we create a search bar that:
 
 <!-- Integrations Tab -->
 <div id="integrations" class="w3-container w3-display-container city" style="display:none">
-<h2>Integrations</h2>
+<h2>My Integrations</h2>
 	<div class="integration" style="align-items: center;"><img alt="" src="socialMediaIcons/facebook.png" width="25px" height="25px" />&nbsp;&nbsp;Facebook<img alt="" src="otherIcons/greenCheck.webp" width="20px" height="20px" style="padding: 0 15px 0 15px; position: absolute; right: 0;" /></div>
 	<div class="integration" style="align-items: center;"><img alt="" src="socialMediaIcons/instagram.png" width="25px" height="25px" />&nbsp;&nbsp;Instagram<button id="connectToInstagramButton" onmouseleave="document.getElementById('connectToInstagramButton').style.backgroundColor = '#3c5eab'" onmouseover="document.getElementById('connectToInstagramButton').style.backgroundColor = '#2f2f9a'" style="border-radius: 30px; padding: 0 25px 0 25px; margin: 0 15px 0 15px; position: absolute; right: 0; background-color: #3c5eab; color: #fff;" onclick="confirm('Do you want to connect to Instagram?')">Connect</button></div>
 	<div class="integration" style="align-items: center;"><img alt="" src="socialMediaIcons/linkedin.png" width="25px" height="25px" />&nbsp;&nbsp;LinkedIn<img alt="" src="otherIcons/greenCheck.webp" width="20px" height="20px" style="padding: 0 15px 0 15px; position: absolute; right: 0;" /></div>
