--- a/mySite/mySite.html
+++ b/mySite/mySite.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,200" />
 
 	<!-- JavaScript -->
-	<script src="mysite.js"></script>
+	<script type="module" src="mysite.js"></script>
 
 </head>
 <body>
@@ -50,23 +50,64 @@
 
 	<section id="contact">
 		<h2 style="font-family: var(--secondaryFont);">Contact Us</h2>
+
+		<form>
+			<div>
+				<label for="name">Name</label>
+				<input type="text" id="name" name="name" placeholder="Your name..">
+			</div>
+			<div>
+				<label for="email">Email</label>
+				<input type="email" id="email" name="email" placeholder="Your email..">
+			</div>
+			<div>
+				<label for="subject">Subject</label>
+				<textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+			</div>
+			<div>
+				<input type="submit" value="Submit">
+			</div>
+		</form>
+
 	</section>
 
 </main>
+
 <footer>
+
+	<div>
+		<p style="font-size: 26px">Contact</p>
+		<p>Phone: <a class="primaryContactPhone underline bold"></a></p>
+		<p>Email: <a class="primaryContactEmail underline bold"></a></p>
+		<p>Website: <a class="primaryContactWebsite underline bold"></a></p>
+		<text>Address:</text>
+		<a class="officeAddressFull underline bold" title="Address" href="" target="_blank">
+			<text class="officeAddressStreet1"></text>
+			<text class="officeAddressStreet2"></text>
+			<text class="officeAddressCity"></text>
+			<text class="officeAddressState"></text>
+			<text class="officeAddressZip"></text>
+			<text class="officeAddressCountry"></text>
+		</a>
+	</div>
+	<div>
+		<p style="font-size: 26px">Social</p>
+		<p>Facebook: <a class="facebookUrl underline bold"></a></p>
+		<p>LinkedIn: <a class="linkedinUrl underline bold"></a></p>
+		<p>Instagram: <a class="instagramUrl underline bold"></a></p>
+		<p>Twitter: <a class="twitterUrl underline bold"></a></p>
+		<p>TikTok: <a class="tiktokUrl underline bold"></a></p>
+	</div>
 
 </footer>
 
 
-
 </body>
 
-=========
-
-<h1>Header 1</h1>
-<h2>Header 2</h2>
+<h1 class="primaryColor">Header 1</h1>
+<h2 class="secondaryColor">Header 2</h2>
 <h3>Header 3</h3>
-<h4>Header 4</h4>
+<a class="primaryContactPhone"></a>
 <h5>Header 5</h5>
 <h6>Header 6</h6>
 
