social media icons for both person1 and for the company on the footer

--- a/mySite/mySite.html
+++ b/mySite/mySite.html
@@ -30,7 +30,7 @@
 				Subject: "Message from BrandWield",
 				Body: "Well that was easy!!",
 			})
-			.then(function (message) {
+			.then(function () {
 				alert("mail sent successfully")
 			});
 		}
