Mainly just cleaning up code

--- a/mySite/mySite.html
+++ b/mySite/mySite.html
@@ -79,7 +79,7 @@
 	<!-- Mission -->
 	<section id="mission">
 		<h2>Our Mission</h2>
-		<p class="missionStatement">
+		<p class="missionStatement"></p>
 	</section>
 
 	<!-- About -->
