Mainly just cleaning up code

--- a/main.html
+++ b/main.html
@@ -266,6 +266,8 @@
 			<div class="content-inner">
 				<div class="varGroup">
 
+					<h3>Monday</h3>
+
 					<!-- Monday Opening Time -->
 					<div class="var">
 						<span id="warningMondayOpeningTime" class="material-symbols-outlined" style="display: none;" onclick="alert('Please enter a Monday opening time!');">warning</span>&nbsp;
